Fix alignment on cookbook view

--- a/src/views/CookBook/CookBook.module.css
+++ b/src/views/CookBook/CookBook.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1200px;
   gap: 20px;
 }
 
